--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  dio: ^4.0.4
   logger: ^1.1.0
   intl: ^0.17.0
   lottie: ^1.4.1
+  http: ^0.13.5
+  slide_countdown: ^0.2.12
 
 dev_dependencies:
   flutter_test:
