--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   slide_countdown: ^0.2.12
   get: ^4.6.5
   supabase_flutter: ^0.3.3
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
