--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   supabase_flutter: ^0.3.3
   shimmer: ^2.0.0
   url_strategy: ^0.2.0
+  lint: ^1.10.0
 
 dev_dependencies:
   flutter_test:
