--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   url_strategy: ^0.2.0
   lint: ^2.0.1
   package_info_plus: ^3.0.2
+  responsive_builder: ^0.4.3
 
 dev_dependencies:
   flutter_test:
